# rusty_web_hijinks

./: README.md
graph_hijinks/: .gitignore  Cargo.toml  index.html
graph_hijinks/src/: lib.rs
image_hijinks/: Cargo.toml  index.html
image_hijinks/src/: lib.rs
