[package]
name = "image_hijinks"
version = "0.1.0"
authors = ["Lee Martin <lee.martin@pliminus.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
image = "0.23.14"
num-complex = "0.4.0"
base64 = "0.13.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
